后台用户模块

--- a/src/conf.properties
+++ b/src/conf.properties
@@ -16,7 +16,7 @@ apppichost=http:/bd.battsister.com/
 Filepath=E:/battsisterProject/battsister
 webpath=E:/battsisterProject/battsister
 LogFile=E:/battsisterProject/battsister/logs/ErrLog.txt
-Magsteup=D:/magic/ImageMagick-6.3.9-Q16
+Magsteup=D:/install/ImageMagick-6.3.9-Q16
 istomcat=YES
 servertype=window
 AccessKey=y7brmXqkhirx_acIDF_LcGSQxwyLsSOegpbZZklA
