--- a/src/conf.properties
+++ b/src/conf.properties
@@ -19,5 +19,6 @@ LogFile=E:/battsisterProject/battsister/logs/ErrLog.txt
 Magsteup=D:/install/ImageMagick-6.3.9-Q16
 istomcat=YES
 servertype=window
-AccessKey=y7brmXqkhirx_acIDF_LcGSQxwyLsSOegpbZZklA
-SecretKey=LtcCLt-Lbqn4O_NtPtdowU-rSi40A2Dy1SIC6irY
+#qiniu
+AccessKey=fT4nFfcWnbA8oSfcwAIcmXrY7FPNQw5LV4eKOMI0
+SecretKey=teLkXogWhdgOMaWw-rFGb_zAm4vvtZNbzx1nvS8T
