--- a/src/conf.properties
+++ b/src/conf.properties
@@ -22,3 +22,5 @@ servertype=window
 #qiniu
 AccessKey=fT4nFfcWnbA8oSfcwAIcmXrY7FPNQw5LV4eKOMI0
 SecretKey=teLkXogWhdgOMaWw-rFGb_zAm4vvtZNbzx1nvS8T
+#openOffice
+OpenOffice_HOME=C:\\Program Files (x86)\\OpenOffice 4
